Change in ReadMe. Comments added. New logging mode added to InstaBot class.

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,10 @@
 				{{ log }}
 		  	</code>
 		  	</pre>
-		{% elif error %}
+		{% elif message %}
 			<pre>
 			<code>
-				{{ error }}
+				{{ message }}
 		  	</code>
 		  	</pre>
 		{% endif %}
